--- a/index.html
+++ b/index.html
@@ -390,5 +390,18 @@
         </div>
     </div>
 
+    <div class="wrap-11">
+        <div class="container">
+            <div class="company-logo-wrapper">
+                
+                <div class="box"><span aria-label="company logo" class="fa fa-wordpress"></span> Wordpress</div>
+                <div class="box"><span aria-label="company logo" class="fa fa-wordpress"></span> Wordpress</div>
+                <div class="box"><span aria-label="company logo" class="fa fa-wordpress"></span> Wordpress</div>
+                <div class="box"><span aria-label="company logo" class="fa fa-wordpress"></span> Wordpress</div>
+                <div class="box last-box"><span aria-label="company logo" class="fa fa-wordpress"></span> Wordpress</div>
+            </div>
+        </div>
+    </div> 
+
  </body>
 </html>
