--- a/index.html
+++ b/index.html
@@ -431,6 +431,14 @@
         </div>
     </section>
 
+    <footer class="wrap-13">
+        <div class="container footer-wrapper">
+            <h3>IDDO</h3>
+            <p>&copy; 2014</p>
+            <button><span class="fa fa-chevron-up"></span></button>
+        </div>
+    </footer>
+
 
  </body>
 </html>
