--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="container header-wrapper">
             <div class="logo">
-                <h1>IDDO</h1>
+                <h1><a href="#banner">IDDO</a></h1>
             </div>
             <div class="menu flex">
                 <nav>
@@ -19,7 +19,7 @@
                         <li><a href="#banner">Home</a></li>
                         <li><a href="#services">Services</a></li>
                         <li><a href="#portfolio">Portfolio</a></li>
-                        <li><a href="#about">About</a></li>
+                        <li><a href="#work">About</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </nav>
@@ -42,7 +42,7 @@
                     <li><a href="#banner">Home</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#about">About</a></li>
+                    <li><a href="#work">About</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <li><button >Sign up</button></li>
                 </ul>
@@ -51,14 +51,14 @@
         </div>
     </header>
 
-    <div class="banner" role="banner">
+    <div class="banner" role="banner" id="banner">
         <div class="container banner-wraper">
             <div class="play-btn"><button aria-label="play button" ><span class="fa fa-play-circle-o"></span></button></div>
             <div class="banner-text-div"><p>Let me show you a few things</p><a href="">Click to play video</a></div>
         </div>
     </div>
 
-    <section class="wrap-3">
+    <section class="wrap-3" id="services">
         <div class="container wrap-3-container">
             <div>
                 <h2>OUR SERVICES.</h2>
@@ -439,6 +439,6 @@
         </div>
     </footer>
 
-
+    <script src="./sandbox.js"></script>
  </body>
 </html>
