add JS mobile menu functionality

--- a/index.html
+++ b/index.html
@@ -39,12 +39,13 @@
 
             <div class="mobile-menu">
                 <ul>
-                    <li><a href="#banner">Home</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#work">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li><button >Sign up</button></li>
+                    <li><a href="#banner" class="mob-menu-a">Home</a></li>
+                    <li><a href="#services" class="mob-menu-a">Services</a></li>
+                    <li><a href="#portfolio" class="mob-menu-a">Portfolio</a></li>
+                    <li><a href="#work" class="mob-menu-a">About</a></li>
+                    <li><a href="#contact" class="mob-menu-a">Contact</a></li>
+                    <!-- <li><button class="" >Sign up</button></li> -->
+                    <li><a href="" class="mobile-sign-btn mob-menu-a">Sign up</a></li>
                 </ul>
             </div>
 
