add JS functionality to  nav Link in Desktop mode

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
             </div>
             <div class="menu flex">
                 <nav>
-                    <ul>
-                        <li><a href="#banner">Home</a></li>
-                        <li><a href="#services">Services</a></li>
-                        <li><a href="#portfolio">Portfolio</a></li>
-                        <li><a href="#work">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                    <ul class="desktop-menu">
+                        <li class="desktop-menu-li"><a href="#banner" class="menu-active desktop-menu-link" id="d-menu-1" onclick="placeBorder(this)">Home</a></li>
+                        <li class="desktop-menu-li"><a href="#services" class="desktop-menu-link" id="d-menu-2" onclick="placeBorder(this)">Services</a></li>
+                        <li class="desktop-menu-li"><a href="#portfolio" class="desktop-menu-link" id="d-menu-3" onclick="placeBorder(this)">Portfolio</a></li>
+                        <li class="desktop-menu-li"><a href="#work" class="desktop-menu-link" id="d-menu-4" onclick="placeBorder(this)">About</a></li>
+                        <li class="desktop-menu-li"><a href="#contact" class="desktop-menu-link" id="d-menu-5" onclick="placeBorder(this)">Contact</a></li>
                     </ul>
                 </nav>
                 
